--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -51,15 +51,18 @@ jobs:
         run: |
           python promote_model.py
 
-      - name: Build Docker Image
+      - name: Connect Docker Client to Elastic Container Registry
         run: |
-          docker build -t uber-demand-prediction-model:latest .
+          aws ecr get-login-password --region eu-north-1 | \
+          docker login --username AWS --password-stdin 835952944694.dkr.ecr.eu-north-1.amazonaws.com
 
-      - name: Login into Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Push Image to Docker Hub
+      - name: Build Docker Image
         if: success()
         run: |
-          docker tag uber-demand-prediction-model:latest baziqkhan/uber-demand-prediction-model:latest
-          docker push baziqkhan/uber-demand-prediction-model:latest
+          docker build -t uber-demand:latest .
+
+      - name: Push Image to AWS Elastic Container Registry
+        if: success()
+        run: |
+          docker tag uber-demand:latest 835952944694.dkr.ecr.eu-north-1.amazonaws.com/uber-demand:latest
+          docker push 835952944694.dkr.ecr.eu-north-1.amazonaws.com/uber-demand:latest
