--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -66,19 +66,18 @@ jobs:
         run: |
           docker tag uber-demand:latest 835952944694.dkr.ecr.eu-north-1.amazonaws.com/uber-demand:latest
           docker push 835952944694.dkr.ecr.eu-north-1.amazonaws.com/uber-demand:latest
-      
+
       - name: Zip Files for Deployment
         run: |
           zip -r deployment.zip appspec.yml deploy/scripts/install_dependencies.sh deploy/scripts/start_docker.sh
-        
+
       - name: Pushing deployment.zip to S3
         run: |
           aws s3 cp deployment.zip s3://code-deploy-bucket-baziq/deployment.zip
-      
+
       - name: Trigger Code Deploy Deployment
         if: success()
         run: |
           aws deploy create-deployment --application-name uber-demand-application --deployment-group-name uber-demand-dg \
           --deployment-config-name CodeDeployDefault.OneAtATime --s3-location bucket=code-deploy-bucket-baziq,key=deployment.zip, \
-          bundleType=zip --file-exists-behaviour OVERWRITE --region eu-north-1
-
+          bundleType=zip --file-exists-behavior OVERWRITE --region eu-north-1
